2004-07-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.2.4
	
	* ly/engraver-init.ly: add Volta_engraver.

	* debian/GNUmakefile (EXTRA_DIST_FILES): remove lilypond.dirs.

	* scripts/lilypond-book.py (Lilypond_snippet.output_texinfo): add
	\n to texidoc.

	* input/test/volta-chord-names.ly: new file.

	* lily/volta-bracket.cc (print): handle no bars situation. 

	* lily/volta-engraver.cc (staff_eligible): backport. Always
	use voltaOnThisStaff as override.
	(stop_translation_timestep): backport: set bounds. 

	* scm/define-grobs.scm (all-grob-descriptions): backport (0 . 0)
	fix for clef-8.

2004-07-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/abc2ly.py: Backport.

2004-06-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Apply Debian patch (Anthony Fok).

	* debian/GNUmakefile (EXTRA_DIST_FILES): 
	(CONF_FILES): Update.

2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Remove cruft (requested Anthony Fok.)

2004-06-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.2.3

	* po/tr.po: turkish translation.

2004-06-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond.py (make_include_option): set lilypond_error_p.

	* lily/bar-line.cc (compound_barline): backport ||: fix.

2004-06-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	override for Beam::position-callbacks in grace.  Fixes:
	weird-stem-size-grace

2004-06-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (number_accidentals_from_sig):
	backport additional fixes.

2004-06-07  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (latex_filter_cmd): Use a temporary
	file since 'latex "\\nonstopmode \input /dev/stdin"' doesn't work
	in Cygwin. Warning: ugly hard coded file name used.

2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Instrument transpositions):