@@ -96,8 +96,8 @@ Beam::quanting (SCM smob)
   Grob *me = unsmob_grob (smob);
 
   SCM s = me->get_property ("positions");
-  Real yl = ly_scm2double (ly_car (s));
-  Real yr = ly_scm2double (ly_cdr (s));
+  Real yl = gh_scm2double (gh_car (s));
+  Real yr = gh_scm2double (gh_cdr (s));
 
 
   /*
@@ -110,7 +110,7 @@ Beam::quanting (SCM smob)
   Real slt = Staff_symbol_referencer::line_thickness (me) / ss;
 
   SCM sdy = me->get_property ("least-squares-dy");
-  Real dy_mus = ly_number_p (sdy) ? ly_scm2double (sdy) : 0.0;
+  Real dy_mus = gh_number_p (sdy) ? gh_scm2double (sdy) : 0.0;
   
   Real straddle = 0.0;
   Real sit = (thickness - slt) / 2;
@@ -282,7 +282,7 @@ Beam::quanting (SCM smob)
 #if DEBUG_QUANTING
   SCM inspect_quants = me->get_property ("inspect-quants");
   if (debug_beam_quanting_flag
-      && ly_pair_p (inspect_quants))
+      && gh_pair_p (inspect_quants))
     {
       Drul_array<Real> ins = ly_scm2interval (inspect_quants);
 
@@ -476,8 +476,8 @@ Beam::score_forbidden_quants (Real yl, Real yr,
 	    This test is too weak; we should really check all lines.
 	   */
 	  Direction stem_dir = dirs[d];
-	  Real gap1 =  y[d] - stem_dir * ((j-1) * beam_translation + thickness / 2 - slt/2 );
-	  Real gap2 = y[d] - stem_dir * (j * beam_translation - thickness / 2 + slt/2);
+	  Real gap1 =  y[d] - stem_dir * ((j-1) * beam_translation + thickness / 2 - slt/2.2 );
+	  Real gap2 = y[d] - stem_dir * (j * beam_translation - thickness / 2 + slt/2.2);
 
 	  Interval gap;
 	  gap.add_point (gap1);
