@@ -1,3 +1,8 @@
+2004-07-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/beam-quanting.cc (score_forbidden_quants): backport, more
+	leniency to make sit (upstem) on outer line not be forbidden.
+
 2004-07-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* VERSION: release 2.2.4
